--- a/trivia/index.html
+++ b/trivia/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="section">
             <h2>Part 1: Multiple Choice </h2>
-            <h3></h3>
+            <h3>What was King Henry the VIII's favorite food?</h3>
             <!-- TODO: Add multiple choice question here -->
 
         </div>
