Mon, Apr 25, 2022, 6:39 PM +00:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -19,7 +19,12 @@
     <div class="container">
         <div class="section">
             <h2>Part 1: Multiple Choice </h2>
-            <h3>What was King Henry the VIII's favorite food?</h3>
+            <h3>What is your favorite color?</h3>
+            <ul>
+                <li><button>RED</button></li>
+                <li><button>ORANGE</button></li>
+                <li><button>BLACK</button></li>
+            </ul>
             <!-- TODO: Add multiple choice question here -->
 
         </div>
