Mon, Apr 25, 2022, 6:56 PM +00:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -22,7 +22,7 @@
             <h3>What is your favorite color?</h3>
             <ul>
                 <li><button>RED</button></li>
-                <li><button>ORANGE</button></li>
+                <li class="correct"><button>ORANGE</button></li>
                 <li><button>BLACK</button></li>
             </ul>
             <!-- TODO: Add multiple choice question here -->
