--- a/trivia/index.html
+++ b/trivia/index.html
@@ -21,7 +21,7 @@
             <h2>Part 1: Multiple Choice </h2>
             <h3>What is your favorite color?</h3>
             <ul>
-                <li><button>RED</button></li>
+                <li><button onClick="wrong_answer()">RED</button></li>
                 <li class="correct"><button>ORANGE</button></li>
                 <li><button>BLACK</button></li>
             </ul>
@@ -35,6 +35,7 @@
             <!-- TODO: Add free response question here -->
         </div>
     </div>
+    <script ></script>
 </body>
 
 </html>
