--- a/trivia/index.html
+++ b/trivia/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="section">
-            <h2>Part 2: Free Response</h2>
+            <h2>Part 2: Free Responselmao</h2>
             <hr>
             <!-- TODO: Add free response question here -->
         </div>
