Mon, Apr 25, 2022, 7:32 PM +00:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -25,7 +25,7 @@
                 <li class="correct"><button>ORANGE</button></li>
                 <li><button>BLACK</button></li>
             </ul>
-            <!-- TODO: Add multiple choice question here -->
+            <!-- TODO: Add multiple choice question here huh -->
 
         </div>
 
@@ -35,7 +35,7 @@
             <!-- TODO: Add free response question here -->
         </div>
     </div>
-    <script ></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
