--- a/trivia/index.html
+++ b/trivia/index.html
@@ -20,10 +20,12 @@
         <div class="section">
             <h2>Part 1: Multiple Choice </h2>
             <h3>What is your favorite color?</h3>
+            <h2 id="incorrect_popup">Incorrect</h2>
+            <h2 id="correct_popup">Correct!</h2>
             <ul>
                 <li><button onClick="wrong_answer()">RED</button></li>
-                <li class="correct"><button>ORANGE</button></li>
-                <li><button>BLACK</button></li>
+                <li class="correct"><button onClick="correct_answer()">ORANGE</button></li>
+                <li><button onClick="wrong_answer()">BLACK</button></li>
             </ul>
             <!-- TODO: Add multiple choice question here huh -->
 
