--- a/trivia/index.html
+++ b/trivia/index.html
@@ -20,19 +20,19 @@
         <div class="section">
             <h2>Part 1: Multiple Choice </h2>
             <h3>What is your favorite color?</h3>
-            <h2 id="incorrect_popup">Incorrect</h2>
-            <h2 id="correct_popup">Correct!</h2>
+            <h2 id="incorrect_popup popup">Incorrect</h2>
+            <h2 id="correct_popup popup">Correct!</h2>
             <ul>
                 <li><button onClick="wrong_answer()">RED</button></li>
                 <li class="correct"><button onClick="correct_answer()">ORANGE</button></li>
                 <li><button onClick="wrong_answer()">BLACK</button></li>
             </ul>
-            <!-- TODO: Add multiple choice question here huh -->
+            <!-- TODO: Add multiple choice question here -->
 
         </div>
 
         <div class="section">
-            <h2>Part 2: Free Responselmao</h2>
+            <h2>Part 2: Free Response</h2>
             <hr>
             <!-- TODO: Add free response question here -->
         </div>
