Mon, Apr 25, 2022, 8:03 PM +00:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -20,8 +20,8 @@
         <div class="section">
             <h2>Part 1: Multiple Choice </h2>
             <h3>What is your favorite color?</h3>
-            <h2 id="incorrect_popup popup">Incorrect</h2>
-            <h2 id="correct_popup popup">Correct!</h2>
+            <h2 class="incorrect_popup popup">Incorrect</h2>
+            <h2 class="correct_popup popup">Correct!</h2>
             <ul>
                 <li><button onClick="wrong_answer()">RED</button></li>
                 <li class="correct"><button onClick="correct_answer()">ORANGE</button></li>
