--- a/trivia/index.html
+++ b/trivia/index.html
@@ -23,9 +23,9 @@
             <h2 class="incorrect_popup popup">Incorrect</h2>
             <h2 class="correct_popup popup">Correct!</h2>
             <ul>
-                <li><button class="wrong" onClick="wrong_answer()">RED</button></li>
+                <li><button class="wrong1" onClick="wrong_answer()">RED</button></li>
                 <li><button class="correct" onClick="correct_answer()">ORANGE</button></li>
-                <li><button class="wrong" onClick="wrong_answer()">BLACK</button></li>
+                <li><button class="wrong2" onClick="wrong_answer()">BLACK</button></li>
             </ul>
             <!-- TODO: Add multiple choice question here -->
 
