--- a/trivia/index.html
+++ b/trivia/index.html
@@ -20,8 +20,7 @@
         <div class="section">
             <h2>Part 1: Multiple Choice </h2>
             <h3>What is your favorite color?</h3>
-            <h2 class="incorrect_popup popup">Incorrect</h2>
-            <h2 class="correct_popup popup">Correct!</h2>
+            <h2 class="popup_text"></h2>
             <ul>
                 <li><button class="wrong_1">RED</button></li>
                 <li><button class="correct">ORANGE</button></li>
