--- a/trivia/index.html
+++ b/trivia/index.html
@@ -32,7 +32,7 @@
 
         <div class="section">
             <h2>Part 2: Free Response</h2>
-            <hr>
+            <h3>What is my Name?</h3>
             <!-- TODO: Add free response question here -->
         </div>
     </div>
