--- a/trivia/index.html
+++ b/trivia/index.html
@@ -33,6 +33,7 @@
         <div class="section">
             <h2>Part 2: Free Response</h2>
             <h3>What is my Name?</h3>
+            <input type="text">
             <!-- TODO: Add free response question here -->
         </div>
     </div>
