Tue, Apr 26, 2022, 5:13 PM +00:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -34,6 +34,7 @@
             <h2>Part 2: Free Response</h2>
             <h3>What is my Name?</h3>
             <input type="text">
+            <button>Submit</button>
             <!-- TODO: Add free response question here -->
         </div>
     </div>
