Tue, Apr 26, 2022, 6:02 PM +00:00

--- a/trivia/index.html
+++ b/trivia/index.html
@@ -34,7 +34,7 @@
             <h2>Part 2: Free Response</h2>
             <h3>What is my Name?</h3>
             <input type="text">
-            <button type="submit">Submit</button>
+            <button type="submit">Submit this is a test</button>
             <!-- TODO: Add free response question here -->
         </div>
     </div>
