--- a/trivia/index.html
+++ b/trivia/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="section">
             <h2>Part 1: Multiple Choice </h2>
-            <h3>What is your favorite color?</h3>
+            <h3>What is my favorite color?</h3>
             <h2 class="popup_text"></h2>
             <ul>
                 <li><button class="wrong_1">RED</button></li>
