--- a/homepage/page-2.html
+++ b/homepage/page-2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="styles.css">
     <title>CS50FLIX | Tenet</title>
 </head>
 
@@ -27,7 +27,7 @@
 <wrapper>
     <body class="page-body">
         <nav class="navbar">
-            <a class="nav-item nav-link link-light" href="index2.html"><h3>Home</h3></a>
+            <a class="nav-item nav-link link-light" href="index.html"><h3>Home</h3></a>
             <a class="nav-item nav-link link-light" href="#"><h3 class="profile-btn">Sign in</h3></a>
         </nav>
         <div class="side-bar text-white">
