--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>CS50FLIX | CS50 project</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <div class="modal-wrapper">
     <div class="sign-in-modal container text-center pb-5 bg-dark">
-        <button class="x-btn btn btn-dark"><h3>X</h3></button>
+        <button class="x-btn btn btn-dark">
+            <h3>X</h3>
+        </button>
         <h1 class="p-3">Sign in</h1>
         <form class="sign-in-form">
             <h3>Username</h3>
@@ -26,10 +30,15 @@
 </div>
 
 <wrapper>
+
     <body class="text-white">
         <nav class="navbar">
-            <a class="nav-item nav-link link-light" href="index.html"><h3>Home</h3></a>
-            <a class="nav-item nav-link link-light " href="#"><h3 class="profile-btn">Sign in</h3></a>
+            <a class="nav-item nav-link link-light" href="index.html">
+                <h3>Home</h3>
+            </a>
+            <a class="nav-item nav-link link-light " href="#">
+                <h3 class="profile-btn">Sign in</h3>
+            </a>
         </nav>
         <main class="">
             <div class="text-center">
@@ -37,20 +46,25 @@
             </div>
             <div class="movies d-flex justify-content-around flex-wrap-reverse">
                 <div class="movie">
-                    <a class="movie-link" href="page-1.html"><img src="https://m.media-amazon.com/images/I/71HPEO8IJTL._AC_SY741_.jpg" alt="Shrek Poster"></a>
+                    <a class="movie-link" href="page-1.html"><img
+                            src="https://m.media-amazon.com/images/I/71HPEO8IJTL._AC_SY741_.jpg" alt="Shrek Poster"></a>
                 </div>
                 <div class="movie">
-                    <a class="movie-link" href="page-2.html"><img src="https://m.media-amazon.com/images/M/MV5BYzg0NGM2NjAtNmIxOC00MDJmLTg5ZmYtYzM0MTE4NWE2NzlhXkEyXkFqcGdeQXVyMTA4NjE0NjEy._V1_.jpg" alt="Tenet Poster"></a>
+                    <a class="movie-link" href="page-2.html"><img
+                            src="https://m.media-amazon.com/images/M/MV5BYzg0NGM2NjAtNmIxOC00MDJmLTg5ZmYtYzM0MTE4NWE2NzlhXkEyXkFqcGdeQXVyMTA4NjE0NjEy._V1_.jpg"
+                            alt="Tenet Poster"></a>
                 </div>
                 <div class="movie">
-                    <a class="movie-link" href="page-3.html"><img src="https://m.media-amazon.com/images/I/517XbXyIwRL._AC_.jpg" alt=""></a>
+                    <a class="movie-link" href="page-3.html"><img
+                            src="https://m.media-amazon.com/images/I/517XbXyIwRL._AC_.jpg" alt=""></a>
                 </div>
             </div>
         </main>
         <footer class="container-fluid">
             <h3 class="footer-tag text-center">Brian Williams | 2022</h3>
-        </footer">
-        <script src="script.js"></script>
+            </footer">
+            <script src="script.js"></script>
     </body>
 </wrapper>
+
 </html>
