--- a/homepage/page-1.html
+++ b/homepage/page-1.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>CS50FLIX | Shrek</title>
 </head>
 
 <div class="modal-wrapper text-white">
     <div class="sign-in-modal container text-center pb-5 bg-dark">
-        <button class="x-btn btn btn-dark"><h3>X</h3></button>
+        <button class="x-btn btn btn-dark">
+            <h3>X</h3>
+        </button>
         <h1 class="p-3">Sign in</h1>
         <form action="" class="sign-in-form">
             <h3>Username</h3>
@@ -25,24 +29,39 @@
 </div>
 
 <wrapper>
+
     <body class="page-body">
         <nav class="navbar">
-            <a class="nav-item nav-link link-light" href="index.html"><h3>Home</h3></a>
-            <a class="nav-item nav-link link-light" href="#"><h3 class="profile-btn">Sign in</h3></a>
+            <a class="nav-item nav-link link-light" href="index.html">
+                <h3>Home</h3>
+            </a>
+            <a class="nav-item nav-link link-light" href="#">
+                <h3 class="profile-btn">Sign in</h3>
+            </a>
         </nav>
         <div class="side-bar text-white">
             <h1 class="text-danger movie-desc-title">Shrek</h1>
             <h3>(2001)</h3>
             <br>
             <p class="movie-desc">
-                When a green ogre named Shrek discovers his swamp has been 'swamped' with all sorts of fairytale creatures by the scheming Lord Farquaad, Shrek sets out with a very loud donkey by his side to 'persuade' Farquaad to give Shrek his swamp back. Instead, a deal is made. Farquaad, who wants to become the King, sends Shrek to rescue Princess Fiona, who is awaiting her true love in a tower guarded by a fire-breathing dragon. But once they head back with Fiona, it starts to become apparent that not only does Shrek, an ugly ogre, begin to fall in love with the lovely princess, but Fiona is also hiding a huge secret.
+                When a green ogre named Shrek discovers his swamp has been 'swamped' with all sorts of fairytale
+                creatures by the scheming Lord Farquaad, Shrek sets out with a very loud donkey by his side to
+                'persuade' Farquaad to give Shrek his swamp back. Instead, a deal is made. Farquaad, who wants to become
+                the King, sends Shrek to rescue Princess Fiona, who is awaiting her true love in a tower guarded by a
+                fire-breathing dragon. But once they head back with Fiona, it starts to become apparent that not only
+                does Shrek, an ugly ogre, begin to fall in love with the lovely princess, but Fiona is also hiding a
+                huge secret.
             </p>
             <br>
         </div>
         <div class="trailer ratio ratio-16x9">
-            <iframe src="https://www.youtube.com/embed/CwXOrWvPBPk?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/CwXOrWvPBPk?autoplay=1" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <script src="script.js"></script>
     </body>
 </wrapper>
+
 </html>
