--- a/homepage/page-3.html
+++ b/homepage/page-3.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>CS50FLIX | Scott Pilgrim vs. the World</title>
 </head>
 
 <div class="modal-wrapper text-white">
     <div class="sign-in-modal container text-center pb-5 bg-dark">
-        <button class="x-btn btn btn-dark"><h3>X</h3></button>
+        <button class="x-btn btn btn-dark">
+            <h3>X</h3>
+        </button>
         <h1 class="p-3">Sign in</h1>
         <form action="" class="sign-in-form">
             <h3>Username</h3>
@@ -26,22 +29,35 @@
 </div>
 
 <wrapper>
+
     <body class="page-body">
         <nav class="navbar">
-            <a class="nav-item nav-link link-light" href="index.html"><h3>Home</h3></a>
-            <a class="nav-item nav-link link-light" href="#"><h3 class="profile-btn">Sign in</h3></a>
+            <a class="nav-item nav-link link-light" href="index.html">
+                <h3>Home</h3>
+            </a>
+            <a class="nav-item nav-link link-light" href="#">
+                <h3 class="profile-btn">Sign in</h3>
+            </a>
         </nav>
         <div class="side-bar text-white">
             <h1 class="text-danger movie-desc-title">Scott Pilgrim <br>vs. the World</h1>
             <h3>(2010)</h3>
             <br>
             <p class="movie-desc">
-                Scott Pilgrim plays in a band which aspires to success. He dates Knives Chau, a high-school girl five years younger, and he hasn't recovered from being dumped by his former girlfriend, now a success with her own band. When Scott falls for Ramona Flowers, he has trouble breaking up with Knives and tries to romance Ramona. As if juggling two women wasn't enough, Ramona comes with baggage: seven ex-lovers, with each of whom Scott must do battle to the death in order to win Ramona.
+                Scott Pilgrim plays in a band which aspires to success. He dates Knives Chau, a high-school girl five
+                years younger, and he hasn't recovered from being dumped by his former girlfriend, now a success with
+                her own band. When Scott falls for Ramona Flowers, he has trouble breaking up with Knives and tries to
+                romance Ramona. As if juggling two women wasn't enough, Ramona comes with baggage: seven ex-lovers, with
+                each of whom Scott must do battle to the death in order to win Ramona.
         </div>
         <div class="trailer ratio ratio-16x9">
-            <iframe src="https://www.youtube.com/embed/7wd5KEaOtm4?start=6&end=443&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/7wd5KEaOtm4?start=6&end=443&autoplay=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <script src="script.js"></script>
     </body>
 </wrapper>
+
 </html>
