--- a/project/index.html
+++ b/project/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>This is a test</h1>
+    <h1>This is a test huh</h1>
 </body>
 <script src="script.js"></script>
 </html>
